# EverSoulSimulator

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  GarnetRapture.txt  LICENSE  README.md  README_cn.md  README_en.md  README_kr.md  apk.md  ba.ps1  bs.ps1  build-server.ps1  build.ps1  build.sh  captured_new_user_registration.md  captured_requests.md  deploy_offline_data.sh  everdump.sh  forward.sh  hook_liapp.js  monitor_unity_web_request.js  package.json  setup_env.py  setup_env.sh  trace_hero_formation.py  步骤.txt  로그.txt
.githooks/: pre-commit
cmake/: copy_data_dirs.cmake  gen_proto_blob.cmake  gen_web_blob.py  run_injector.cmake  version_resources.rc.in
docs/: adb_injector.md  adb_injector_cn.md  adb_injector_en.md  architecture.md  architecture_cn.md  architecture_en.md  auth_server.md  auth_server_cn.md  auth_server_en.md  backend_dynamic_reproduction_plan.md  binary_understanding_ledger.md  decoded_strings_ledger.md  eversoul_runtime_http_evidence_2026-06-16.md  game_server.md  game_server_cn.md  game_server_en.md  multi_sqlite_pc_external_server_methodology.md  offline-multi-plan.md  proxy_server.md  proxy_server_cn.md  proxy_server_en.md  source-architecture-complete-20260621.md  ssr.md  sss_har_kr_auth_gap_analysis_20260620.md  web_ui_server.md  web_ui_server_cn.md  web_ui_server_en.md  websocket_server.md  websocket_server_cn.md  websocket_server_en.md
eversoul-redirect-module/: build.gradle  local.properties  settings.gradle
eversoul-redirect-module/app/src/main/cpp/: CMakeLists.txt  redirect.cpp
kr_apk/: eversoul.keystore
probability/: 59081_en_2._Keepsake_Erikas_Alchemy_Other_Chest_Type_Items_24._03._28.md  65850_en_10._Amount_Per_Level_of_Potential_and_Probability_Table_24.08.29.md  71610_en_4._Town_Shop_Probability_Table_1_25.01.23.md  71611_en_5._Town_Shop_Probability_Table_2_25.01.23.md  84557_en_9._Battlefront_-_Loot_Per_Minute_Probability_4_25._11._27.md  84559_en_3._ReleaseLabyrinthArenaESAllianceAntique_Shop_Rate_Table_25.11.27.md  84566_en_7._Raid_Shop_Probability_Table_1_25._11._27.md  84568_en_8._Raid_Shop_Probability_Table_2_25._11._27.md  86361_en_6._GeneralArtifact_Shop_Probability_Table_3_26.02.19.md  87363_en_1._Soul_Erikas_Alchemy_etc._Summon_Rate_Table_26.04.16.md  _manifest.md
responses/: AchievementAllReceive.json  AchievementList.json  ArbeitFinish.json  ArbeitList.json  ArbeitOption.json  ArbeitStart.json  ArenaEnter.json  ArenaFormationInfo.json  ArenaMatchingList.json  ArenaMyRank.json  ArenaRankList.json  ArenaRankListV2.json  ArenaResultSave.json  ArenaTargetDetail.json  ArenaWaitRewardReceive.json  ArkEnhanceCore.json  AutoHuntOpen.json  AutoHuntQuickReceive.json  AutoHuntReceive.json  BattleConfigSave.json  BestScore.json  BuffList.json  CashGrowInfo.json  CategoryMail.json  ChangeThumbnail.json  ContentLimitSave.json  DJSoulInfoList.json  DJSoulTotalRanking.json  DailyResetList.json  DailyTalk.json  DestinyInfoList.json  DestinyStoryEpisodeStart.json  DoubleGateSweep.json  DungeonBattle.json  DungeonEnter.json  DungeonLevelScaling.json  DungeonObjectReward.json  DungeonOpenCheck.json  DungeonPerfectClear.json  DungeonRestart.json  (+118 more)
responses_newbie/: AchievementAllReceive.json  AchievementList.json  ArenaEnter.json  ArenaMatchingList.json  ArenaMyRank.json  ArenaRankList.json  ArenaResultSave.json  ArenaTargetDetail.json  ArkOverClockInfo.json  AutoHuntOpen.json  AutoHuntQuickReceive.json  AutoHuntReceive.json  BattleConfigSave.json  BattleStart.json  BestScore.json  CashGrowInfo.json  DestinyInfoList.json  DestinyStoryEpisodeClear.json  DungeonClear.json  DungeonInfoUpdate.json  DungeonMode.json  EdenUnionInfo.json  EdenUnionRankList.json  EventActiveList.json  EventDailyPassList.json  EventDailyPassReceive.json  EventPickupGachaSelect.json  EventQuestAllReceive.json  EventQuestList.json  FormationSave.json  FriendRecommendList.json  GachaChangeTribe.json  GachaHero.json  GachaHeroTutorial.json  GachaHeroTutorialFix.json  GachaInfo.json  GachaMileageUse.json  GachaWishRegister.json  GetContentClearDeck.json  GuideQuestRewardAllReceive.json  (+49 more)
schema/: AchievementAllReceive.json  AchievementList.json  ArbeitFinish.json  ArbeitList.json  ArbeitOption.json  ArbeitStart.json  ArenaEnter.json  ArenaFormationInfo.json  ArenaMatchingList.json  ArenaMyRank.json  ArenaRankList.json  ArenaRankListV2.json  ArenaResultSave.json  ArenaTargetDetail.json  ArenaWaitRewardReceive.json  ArkEnhanceCore.json  ArkOverClockInfo.json  AutoHuntOpen.json  AutoHuntQuickReceive.json  AutoHuntReceive.json  BattleConfigSave.json  BattleStart.json  BestScore.json  BuffList.json  CashGrowInfo.json  CategoryMail.json  ChangeThumbnail.json  ContentLimitSave.json  DJSoulInfoList.json  DJSoulTotalRanking.json  DailyResetList.json  DailyTalk.json  DestinyInfoList.json  DestinyStoryEpisodeClear.json  DestinyStoryEpisodeStart.json  DoubleGateSweep.json  DungeonClear.json  DungeonEnter.json  DungeonInfoUpdate.json  DungeonLevelScaling.json  (+153 more)
schemas/: Achievement.fbs  AchievementSubCategory.fbs  AlchemistGachaProbs.fbs  AlchemistSchedule.fbs  Anniversary.fbs  ArbeitAnime.fbs  ArbeitBonus.fbs  ArbeitChoice.fbs  ArbeitFairyLevel.fbs  ArbeitList.fbs  ArenaRelic.fbs  ArenaReward.fbs  ArenaTimeReward.fbs  ArkEnhance.fbs  ArkOverClock.fbs  Attendance.fbs  Background.fbs  BanWord.fbs  BanWordChat.fbs  Barrier.fbs  BattleBGM.fbs  BattleBuff.fbs  Behavior.fbs  CashShop.fbs  CashShopCategory.fbs  CashShopCustomItem.fbs  CashShopGrowPack.fbs  CashShopGrowPackItem.fbs  CashShopHeroPass.fbs  CashShopHeroPassItems.fbs  CashShopItem.fbs  CashShopRelayPopupItem.fbs  CashShopUI.fbs  ChallengeBattle.fbs  ChallengeReward.fbs  ChallengeStage.fbs  ChallengeTask.fbs  ChatEmoticon.fbs  ContentsBuff.fbs  ContentsLimit.fbs  (+305 more)
scripts/: build_redirect_dex.sh  deploy_android.sh
smali_inject/: README.md  RedirectHooks.java  URLHook.java
src/: account_database.cpp  account_database.hpp  account_db.cpp  account_db.hpp  adb_finder.cpp  adb_finder.hpp  adb_runner.cpp  adb_runner.hpp  admin_html.hpp  admin_log_sink.cpp  admin_log_sink.hpp  admin_server.cpp  admin_server.hpp  agent_entry.cpp  (+105 more)
(+23132 files in other folders)
